--- a/0～10.ipynb
+++ b/0～10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0～10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4k90sxvHDGjTZyiKu0hH6",
+      "authorship_tag": "ABX9TyNEu4ijhC4q7lTfGvDWB55G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         " y += i\n",
         "print(y)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         " n = n + 1\n",
         "print(y)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "  y += x1[i]+x2[i]\n",
         "print(y) "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "\n",
         "print(list)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "\n",
         "print(d)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "        tan_n += y1[i+k]\n",
         "      tan.append(tan_n)\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
         "print(n_gram(x, 2, 0))\n",
         "print(n_gram(x, 2, 1))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,41 +474,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "54vvGYcRJc9E",
-        "outputId": "5a42485e-5079-4423-ed45-1a3bc7063fd5"
+        "outputId": "a2c2b979-b769-4ebd-863a-8278a42d99c9"
       },
       "source": [
-        "import random\n",
+        "def random_pass(x):\n",
+        " import random\n",
+        " x1 = x.replace(',', '')\n",
+        " x1 = x1.replace('.', '')\n",
+        " x1 = x1.split(' ')\n",
+        " y = \"\"\n",
+        " for i in range(0, len(x1)):\n",
+        "   #5文字以上\n",
+        "   if len(x1[i]) > 4:\n",
+        "     m = x1[i][0]\n",
+        "     w = \"\"\n",
+        "     #中の文字をとりだす\n",
+        "     for j in range(1, len(x1[i])-1):\n",
+        "       w += x1[i][j]\n",
+        "     #ランダムに中の文字を入れ替える \n",
+        "     w1 = \"\".join(random.sample(w, len(w)))\n",
+        "     m += w1\n",
+        "     m += x1[i][len(x1[i])-1]\n",
+        "     y += m\n",
+        "   #4文字以下\n",
+        "   else:\n",
+        "     y += x1[i]\n",
+        "   y += \" \"\n",
+        "\n",
+        " return y\n",
+        "\n",
         "x = \"I couldn’t believe that I could actually understand what I was reading : the phenomenal power of the human mind .\"\n",
-        "x1 = x.replace(',', '')\n",
-        "x1 = x1.replace('.', '')\n",
-        "x1 = x1.split(' ')\n",
-        "y = \"\"\n",
-        "for i in range(0, len(x1)):\n",
-        "  #5文字以上\n",
-        "  if len(x1[i]) > 4:\n",
-        "    m = x1[i][0]\n",
-        "    w = \"\"\n",
-        "    #中の文字をとりだす\n",
-        "    for j in range(1, len(x1[i])-1):\n",
-        "      w += x1[i][j]\n",
-        "    #ランダムに中の文字を入れ替える \n",
-        "    w1 = \"\".join(random.sample(w, len(w)))\n",
-        "    m += w1\n",
-        "    m += x1[i][len(x1[i])-1]\n",
-        "    y += m\n",
-        "  #4文字以下\n",
-        "  else:\n",
-        "    y += x1[i]\n",
-        "  y += \" \"\n",
-        "print(y)\n"
+        "print(random_pass(x))\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I cdolu’nt bieelve that I cloud atlluacy usadenntrd what I was randieg : the pehnaomnel pewor of the human mind  \n"
+            "I conld’ut beeivle that I cuold aluatlcy unntrsdead what I was rdniaeg : the pahoennmel pweor of the haumn mind  \n"
           ]
         }
       ]
