--- a/0～10.ipynb
+++ b/0～10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0～10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEu4ijhC4q7lTfGvDWB55G",
+      "authorship_tag": "ABX9TyPFMjP4MneA/Lj5HjfcceuL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,7 +290,7 @@
         "        tan_n += y1[i+k]\n",
         "      tan.append(tan_n)\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KIEKUoVWb98m",
-        "outputId": "d31ac536-d922-4dab-9bd6-ee9813ecd089"
+        "outputId": "6a929d2e-64bf-455d-e69d-57db61f43dc4"
       },
       "source": [
         "x1 = \"paraparaparadise\"\n",
@@ -351,29 +351,29 @@
         "print(set(x3))\n",
         "#積集合\n",
         "x4 = []\n",
-        "for i in range(0, len(tan1)):\n",
+        "for i in range(len(tan1)):\n",
         " if tan1[i] in tan2:\n",
         "      x4.append(tan1[i])\n",
         "print(set(x4))\n",
         "#差集合\n",
         "x5 = []\n",
-        "for i in range(0, len(tan1)):\n",
+        "for i in range(len(tan1)):\n",
         " if tan1[i] not in tan2:\n",
         "      x5.append(tan1[i])\n",
-        "for i in range(0, len(tan2)):\n",
+        "for i in range(len(tan2)):\n",
         " if tan2[i] not in tan1:\n",
         "      x5.append(tan2[i])\n",
         "print(set(x5))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'gr', 'pa', 'ag', 'ph', 'is', 'se', 'ar', 'ad', 'ra', 'ap', 'di'}\n",
-            "{'ar', 'pa', 'ra', 'ap'}\n",
-            "{'gr', 'ph', 'is', 'se', 'ad', 'di', 'ag'}\n"
+            "{'is', 'ag', 'ph', 'di', 'ar', 'ap', 'se', 'gr', 'pa', 'ad', 'ra'}\n",
+            "{'ar', 'ap', 'ra', 'pa'}\n",
+            "{'ag', 'ph', 'di', 'se', 'gr', 'is', 'ad'}\n"
           ]
         }
       ]
@@ -506,7 +506,7 @@
         "x = \"I couldn’t believe that I could actually understand what I was reading : the phenomenal power of the human mind .\"\n",
         "print(random_pass(x))\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
