--- a/0～10.ipynb
+++ b/0～10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0～10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPFMjP4MneA/Lj5HjfcceuL",
+      "authorship_tag": "ABX9TyNiAb+jcrx1vtZ9eb2/MbNp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,7 +290,7 @@
         "        tan_n += y1[i+k]\n",
         "      tan.append(tan_n)\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KIEKUoVWb98m",
-        "outputId": "6a929d2e-64bf-455d-e69d-57db61f43dc4"
+        "outputId": "afbbe9e4-6a76-4e5a-a662-9ad28fb83b62"
       },
       "source": [
         "x1 = \"paraparaparadise\"\n",
@@ -363,9 +363,11 @@
         "for i in range(len(tan2)):\n",
         " if tan2[i] not in tan1:\n",
         "      x5.append(tan2[i])\n",
-        "print(set(x5))"
+        "print(set(x5))\n",
+        "print('seがXに含まれる:' + str('se' in x1))\n",
+        "print('seがYに含まれる:' + str('se' in x2))"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +375,9 @@
           "text": [
             "{'is', 'ag', 'ph', 'di', 'ar', 'ap', 'se', 'gr', 'pa', 'ad', 'ra'}\n",
             "{'ar', 'ap', 'ra', 'pa'}\n",
-            "{'ag', 'ph', 'di', 'se', 'gr', 'is', 'ad'}\n"
+            "{'ag', 'ph', 'di', 'se', 'gr', 'is', 'ad'}\n",
+            "seがXに含まれる:True\n",
+            "seがYに含まれる:False\n"
           ]
         }
       ]
