Colaboratory を使用して作成しました

--- a/0～10.ipynb
+++ b/0～10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0～10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNiAb+jcrx1vtZ9eb2/MbNp",
+      "authorship_tag": "ABX9TyPY92HzWmwLm5Q/Il4Ktbmi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,7 +367,7 @@
         "print('seがXに含まれる:' + str('se' in x1))\n",
         "print('seがYに含まれる:' + str('se' in x2))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "54vvGYcRJc9E",
-        "outputId": "a2c2b979-b769-4ebd-863a-8278a42d99c9"
+        "outputId": "2b0ef3ed-4d5a-4a8d-e61d-d4174bf89274"
       },
       "source": [
         "def random_pass(x):\n",
@@ -487,7 +487,7 @@
         " x1 = x1.replace('.', '')\n",
         " x1 = x1.split(' ')\n",
         " y = \"\"\n",
-        " for i in range(0, len(x1)):\n",
+        " for i in range(len(x1)):\n",
         "   #5文字以上\n",
         "   if len(x1[i]) > 4:\n",
         "     m = x1[i][0]\n",
@@ -510,13 +510,13 @@
         "x = \"I couldn’t believe that I could actually understand what I was reading : the phenomenal power of the human mind .\"\n",
         "print(random_pass(x))\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I conld’ut beeivle that I cuold aluatlcy unntrsdead what I was rdniaeg : the pahoennmel pweor of the haumn mind  \n"
+            "I clnd’uot blvieee that I culod acuatlly utnsnaedrd what I was raenidg : the pnaehonmel pwoer of the hmuan mind  \n"
           ]
         }
       ]
